--- a/index.html
+++ b/index.html
@@ -20,10 +20,12 @@
 </head>
 
 <body>
-    <div class="sidebar">
-        <img src="logo.png" alt="Logo" class="logo" />
+    <div class="sidebar hidden">
 
         <ul class="workouts">
+            <img src="logo.png" class="logo" alt="Logo" />
+
+            <a class="cross">X</a>
             <form class="form hidden">
                 <div class="form__row">
                     <label class="form__label">Type</label>
@@ -109,7 +111,9 @@
       </p> -->
     </div>
 
-    <div id="map"></div>
+    <div id="map">
+
+    </div>
 </body>
 
 </html>
